# rust-cross-platform-mobile

./: .gitignore  LICENSE  README.md  build_release  clean
SwapiAndroidApp/: .gitignore  build.gradle  settings.gradle
SwapiAndroidApp/app/: build.gradle
SwapiAndroidApp/app/src/main/: AndroidManifest.xml
SwapiAndroidApp/gradle/wrapper/: gradle-wrapper.properties
SwapiIOSApp/SwapiClientIOS/: .gitignore  AppDelegate.swift  ContentView.swift  SceneDelegate.swift  Swapi-Bridging-Header.h  swapi_core.h
SwapiIOSApp/SwapiClientIOS.xcodeproj/: project.pbxproj
SwapiIOSApp/SwapiClientIOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SwapiIOSApp/SwapiClientIOS.xcodeproj/project.xcworkspace/xcuserdata/igor.steblii.xcuserdatad/: UserInterfaceState.xcuserstate
SwapiIOSApp/SwapiClientIOS.xcodeproj/xcuserdata/igor.steblii.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SwapiIOSApp/SwapiClientIOS/model/: People.swift  PeopleResponse.swift
SwapiIOSApp/SwapiClientIOS/swapi/: NativeSwapiClient.swift  People.swift  SwapiLoader.swift
SwapiIOSApp/SwapiClientIOS/view/: PeopleRow.swift
SwapiIOSApp/SwapiClientIOS/vm/: PeopleViewModel.swift
swapi_adr/: Cargo.toml  Readme.md  build.rs
swapi_adr/scripts/: create_s_link  release_build
swapi_adr/src/: lib.rs
swapi_adr/src/swig/: android_logger.rs  java_glue.rs  java_glue.rs.in  mod.rs
swapi_core/: Cargo.toml  Readme.md  build.rs
swapi_core/src/: lib.rs  main.rs  swapi.rs  swapi_core.h
swapi_ios/: .gitignore  Cargo.toml  Readme.md  build.rs
swapi_ios/scripts/: release_build
swapi_ios/src/: main.rs
swapi_ios/src/ffi/: callback.rs  ios_ffi.rs  mod.rs  native_model.rs  swapi_native.h
(+16 files in other folders)
