[package]
name = "swapi_core"
version = "0.1.0"
authors = ["Igor Steblii <xajik0@ggmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"]}
tokio = { version = "*", features = ["full"]}
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", default-features = false, features = ["alloc"] }
openssl = {version = "0.10", features = ["vendored"]}
openssl-sys = "0.9"
libc = "*"
lazy_static = "1.4.0"